@@ -8,6 +8,8 @@ Post-v2.6.0
      * IPAM now supports fixed MAC addresses.
      * Support for source IP address based routing.
      * ovn-trace can now trace put_dhcp_opts and put_dhcp_optsv6 actions.
+     * Support for managing SSL and remote connection configuration in
+       northbound database.
    - Fixed regression in table stats maintenance introduced in OVS
      2.3.0, wherein the number of OpenFlow table hits and misses was
      not accurate.
